fix layout issue

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,3 +1,3 @@
-.page-container {
+.fix-container {
     margin-top: 100px;
 }
